modularite travail en cours

--- a/Modularite.tex
+++ b/Modularite.tex
@@ -1,117 +1,124 @@
 \chapter{Approche modulaire des réseaux de neurones}
-%\textit{Questionner la question de la modularité des différents réseaux de neurones ? → quels sont les échanges ? 
-%Modularité ??? Mécanismes ??? Dans les réseaux de neurones 
-%Emergence ? Modularité→ voir les définitions et les avis des chercheurs la dessus. Pas étonnant qu’on aie plusieurs avis différents. 
-%Modèles bio inspirés : niveau de granularité ? Cellulaire, plus gros. Choix de l’échelles}
-Trouver un questionnement, un exemple qui parle de modularité dans les systèmes biologiques.
-
+De nombreux modèles biologiques présentent des architectures modulaires. Notre conception du monde se présente en fait sous une forme de modularité.
+Trouver un questionnement, un exemple qui parle de modularité dans les systèmes biologiques. 
 Présentation d'exemples de théories dérivées d'une modularité bio-inspirée. 
-- Brooks
-- Mouche qui saute (d'ou ca vient ???)
+Brooks \cite{brooks_sumsumption_85}
 
-\section{Inspiration Biologique de la modularité}
 
-- Nombreuses études s'appuient sur le système modulaire : le cerveau
-- Autre systèmes modulaires biologiques
-- Comment définit on la modularité d'un système naturel ? 
+
+\section{Inspiration Biologique des systèmes modulaires}
+- Inspiration principale des systèmes modulaires = cerveaux. Dans l'intro de la plupart des papiers, c'est la motivation pour faire des systèmes modulaires. Citer des motivations 
+
+\subsection{Aspect modulaire des cerveaux}
+- Nombreuses études s'appuient sur le système modulaire : le cerveau \cite{primate_cortex_91,mountcastle_columnar_1997,binzegger05}
+- Modularité structurelle : exemple du cortex visuel
+- Connexions
+- Modularité hiérarchique( modules de modules) : exemples. 
+\subsection{Autres systèmes modulaires biologiques}
+- groupes d'individus ? 
+\subsection{Comment définir la modularité d'un système naturel ?}
+Plusieurs travaux cherchent à définir ce qu'on appelle modulaire. On 
+- Comment définit on la modularité d'un système naturel ? \cite{Meunier2010ModularAH,Siebert2020RoleOM}
 
 \section{Réponse à un intéret computationnel}
 
-- Parallelisme, calcul et small world networks : réponse a un problème de contrainte physiques, energétiques
+\subsection{Réseaux en "petit-monde"}
+\subsubsection{Définition et exemples}
+Definition: type de graphe dans lequel la distance moyenne entre deux noeuds est proportionnelle à log(N), N le nombre de noeuds. C'est à dire, un graphe dans lequel on trouvera un chemin assez court entre n'importe quels noeuds. 
+Particularités : forme souvent des cliques ( sous graphes fortement connexes), donc une structure modulaire. Par contre, tous les réseaux small world ne sont pas necessairement modulaire. 
+
+Barabasi : Hypothèse que les réseaux small world présentent un avantage evolutionnaire.
+
+Souvent admis que le cerveau en tant que réseau de neurones est small world. 
+Mais : 
+\cite{Hilgetag2015IsTB} : différencie réseaux small world et réseaux hiararchique modulaires, et statue qu'un réseau peut etre "hiérarchique modulaire" même s'il n'est pas small world, mais possède une dimension topologique finie. 
+\cite{Meunier2010ModularAH} : statue que un réseau modulaire est small world, mais différencie les réseaux hiérarchiques modulaires, et statue que le cerveau est plutot hiérarchique modulaire. Donne des exemples de systèmes hiérarchiques modulaires (self similarity), notamment : cerveau 
+
+Modularité hiérarchique présente l'avantage de maintenir une activité dans le réseau sans que ca ne colonise tout ni ne s'eteigne, ce qui est nécessaire pour la computation. 
+
+\begin{itemize}
+\item\textit{Définir small world vs hiérarchique modulaire ? }
+\item\textit{Exemples de réseaux small world, hiéarchiques ? }
+\end{itemize}
+
+ 
+\subsubsection{réponse a un problème de contrainte physiques, énergétiques}
+
+- Parallelisme, calcul et small world networks : réponse a un problème de contrainte physiques, énergétiques. 
 - Calcul distribué 
+- Automates cellulaires  ?
+\section{Modularité et emergence}
+La modularité est liée a la complexité des systèmes, donc l'emergence de comportements chaotiques et/ou synchronisés. 
+\subsection{Systèmes complexes}
+
+\subsection{Modularité necessaire pour l'emergence d'un apprentissage ? }
+
+SYSTEMATIC GENERALIZATION : WHAT IS REQUIRED
+AND CAN IT BE LEARNED ? : 
+Our findings show that the generalization of modular models is much more systematic and that it is highly sensitive to the module layout, i.e. to how exactly the modules are connected.
 
 \section{Quelle définition de la modularité ?}
 
-Il s'agit de tirer une définition claire de ce qu'on appelle modularité. Entre l'étude des systèmes biologiques et l'ingénieurie des réseaux de neurones, il semble qu'il y ait
+Il s'agit de tirer une définition claire de ce qu'on appelle modularité. Entre l'étude des systèmes biologiques et l'ingénieurie des réseaux de neurones, l'aspect modulaire des réseaux et plus généralement des systèmes peut se définir de plusieurs manières. 
+
+	\subsection{Modularité structurelle vs fonctionnelle ? }
+	
+	Définissons en premier lieu le système étudié. Cela peut être un réseau physique, comme c'est le cas dans les réseaux de neurones, mais aussi un système dynamique. Dans ce dernier cas, définir des propriétés de modules via la structure de ce système est plus difficile.
+
+	\subsubsection{Réseaux modulaires}
+	
+
+	\subsubsection{Définir la modularité par la fonction}
+	
+
+	\subsection{Auto-organisation comme conséquence de la modularité ? }
+
+
 - Tour d'horizons des définitions : en bio, en ingénieurie. Auto-organisation, conséquence de la modularité ? 
-- Taxonomie : fonction, stucture,emergence 
-- Position de l'autrice du manuscrit sur la modularité, intéret des différentes modularité
+- Taxonomie : fonctionnelle, stucture modulaire,emergence 
+- Position de l'autrice du manuscrit sur la modularité, intéret des différentes modularités
 - Discussion : est ce que notre esprit modulaire veut trouver de la modularité a tout prix ? ( quand la mod est fonctionnelle, peut etre biais de nos représentations ? Mais, on observe assez objectivement des modules physiques via les connexions dans de nombreux réseaux. Evolution l'a fait comme ca, probablement une réponse globale a un problème. 
 - Echelles de la modularité. 
-
+- Activation d'autres modules
+- Mutli-modalité - un mot, rappel dans une autre partie
 \section{Réseaux de neurones modulaires}
 
 - Challenges et intérêt potentiel des réseaux de neurones modulaires ? -> Evolution (wertmer, meunier) : pousser plus loin pour etre au jus sur les challenges actuels ( voir du coté du deep : quelles sont les motivations et les challenges ? 
 
+
+A mettre dedans : 
+
+- Réseaux top down / modulaires ? définition, a quel point un réseau est modulaire, qu'est ce qu'on appelle réseau modulaire ? 
+- 
+
 \subsection{Deep Learning}
 Grosse boite noire qui ont des performances remarquables sur le traitement des images, du langage etc; leur représentation est toujours un challenge.
 
-- Réseaux qui apprennent a s'organiser en modules. Interet. Limites ? Performances ?
-- Trouver des modules dans les réseaux pour les expliquer ? 
+- Réseaux qui apprennent a s'organiser en modules. Interet. Limites ? Performances ? \cite{Andreas2016NeuralMN,Kirsch2018ModularNL}
+"The NMN approach is intuitively appealing but its
+widespread adoption has been hindered by the large amount of domain knowledge that is required
+to decide (Andreas et al., 2016) or predict (Johnson et al., 2017; Hu et al., 2017) how the modules
+should be created (parametrization) and how they should be connected (layout) based on a natural
+language utterance. Besides, their performance has often been matched by more traditional neural
+models" ( systematic generalization article ) 
+- Trouver des modules dans les réseaux pour les expliquer ? \cite{Watanabe2018ModularRO,Csordas2021AreNN}
+are neural net modular : "it uses different modules for very different functions = Pspecialize," et "it uses the same module for identical functions that
+may have to be performed multiple times = Preuse"
+- Reconciling deep learning with symbolic artificial intelligence: representing objects and relations(2019)
+Pb du deep learning = Data inefficiency (comparé a l'humain);Poor generalisation; Lack of interpretability.
 
 \subsection{Réseaux auto-organisés}
 
+Plus qu'en deep learning, les réseaux de neurones auto-organisés
 - Auto-organisation prend une profonde inspiration biologique, tout comme les modules.
-- Exemple de réseaux auto-organisés modulaires : développer dans la partie suivante. 
+- Exemple de réseaux auto-organisés modulaires : développer dans la partie suivante.
+- 
+
 
 \section{Enjeux d'une architecture modulaire de SOMs}
 
 
 
 
-%Wertmer : Towards bioinspired emergent neural architectures
-%
-%Modular Organisation: There is good knowledge of how to build artificial
-%neural networks to do real world tasks, but little knowledge of how we bring
-%these together in systems to solve larger tasks (such as in associative retrieval
-%and memory).
-%
-%Robustness: How does human memory manage to continue to operate despite
-%failure of its components? What are its properties? Current computers use a fast
-%but brittle memory, brains are slow but robust. Can we learn more about the
-%properties that can be used in conventional computers.
-%
-%Sychronisation and Timing: How does the brain synchronise its processing?
-%How does the brain prevent the well known race conditions found in computers?
-%How does the brain schedule its processing? The brain operates without a central
-%clock (possibly). How is the asynchronous operation achieved? How does the
-%brain compute with relatively slow computing elements but still achieve rapid
-%and real-time performance? How does the brain deal with real-time? Do they
-%exploit any-time properties, do they use special scheduling methods. How well
-%do natural systems achieve this and can we learn from any methods they may
-%use?
-%
-%Learning and Memory Storage: There is evidence from neuron, network
-%and brain levels that the internal state of such a neurobiological system has an
-%influence on processing, learning and memory. However, how can we build com-
-%putational models of these processes and states? How can we design incremental
-%learning algorithms and dynamic memory architectures.
-%
-%le concept d'architecture modulaire se justifie par les structures observées dans le cerveau humain. Au niveau fonctionnel, on observe en effet l'activation d'aires spécifiques à effectuer un ensemble de taches. Cette modularité a plusieurs avantages : 
-%\begin{itemize}
-%\item Apport de robustesse dans le traitement de l'information
-%\item Flexibilité, usage multiple. Les aires sont capable de se réorganiser et de se réassigner des rôles, sans avoir à repartir de zéro
-%\item Association : "le tout est meilleur que la somme des parties". Un point fort de la modularité est d'ajouter de l'information de part la structure et les interactions entre éléments, apportant une meilleure information que si les entrées etaient traitées par des réseau de neurones séparés. 
-%\item Auto activation : l'activation d'un module entraine une activité dans les autres systèmes. 
-%
-%\end{itemize}
-%
-%Distributed hierarchical processing in the visual cortex : 
-%32 aires du cortex visuel identifiées. 
-%Connexions entre certaines aires; toutes les connexions sont bidirectionnelles.
-%Une hiérarchie existe dans le sens ou plus les aires sont "basses" plus la granularité du traitement visuel est grande; plus on monte, plus on abstrait le champ visuel dans sa totalité.
-%
-%
-%Modularity and Specialized Learning: Mapping between Agent Architectures and Brain Organization:
-%Architectural modularity : le cerveau est décomposé en organes ayant des structures internes différentes.
-%Functional modularity :  Des modules sont spécialisés dans le traitement de taches, et ca se voit par l'activation et non l'architecture. Meme, les architectures se ressemblent entre modules, comme le cortex visuel et auditif.
-%Temporal modularity  : 
-%
-%\section{Modularité dans l'aspect temporel : mémoires}
-%
-%
-%
-%
-%\section{Et maintenant ? }
-%
-%Les papiers cités et l'inspiration biologique argumentent en faveur de l'exploration de la modularité dans les réseaux de neurones.
-%
-%Nouvelle vague de l'AI : la modularité ...
-%Il semblerait que des archis modulaires permettent d'amélorier les perfs des réseaux de deep actuels : meilleure généralisation, vitesse d'apprentissage, moins de data ... 
-%
-%Expliquer le deep via des modules
-%Modules pré-cablés vs modules qui émergent
-%
-%Auto-organisation ? 
 
 
