--- a/SOM.tex
+++ b/SOM.tex
@@ -16,3 +16,8 @@ Ainsi, n'importe quel graphe pourrait être considéré; le plus souvent, une gr
 La notion de voisinage et de topologie est un élément clé des cartes de Kohonen. Le voisinage est en effet pris en compte lors de l'apprentissage et lors de l'interpretation des cartes. Cependant, ce voisinage est généralement défini, dans les applications des cartes, comme un bonus par rapport aux KMeans, une aide à la convergence et à la vitesse de dépliement. Pourtant c'est la l'essence même d'une carte de Kohonen: projeter des éléments sur un graphe, ce qui nous permet de faire des calculs sur des positions plutot que des données de grandes dimensions. 
 
 \section{Principes d'organisation}
+
+
+
+\section{A trier}
+De la biologie a la computation : patterns temporels des neurones impulsionnels vs SOM. 
