--- a/main.tex
+++ b/main.tex
@@ -31,4 +31,7 @@
 \input{SOM}
 \input{Algorithme}
 \input{Analyse}
+\input{Conclusion}
+\bibliography{biblio_modularite.bib}
+\bibliographystyle{plain}
 \end{document}
