--- a/Analyse.tex
+++ b/Analyse.tex
@@ -1,7 +1,19 @@
 \chapter{Analyser l'organisation : une approche par variables aléatoires}
 
-Justifier l'approche nouvelle en analysant les réponses, par rapport a l'analyse classique des cartes de Kohonen
+Avant de présenter les performances d'un algorithme, il s'agit de définir plus précisément ce qu'on attend de ce système et comment le représenter. L'architecture CxSOM se présente comme une construction qui répond à un questionnement structurel des réseaux de neurones. Mais au juste, qu'attend t-on de ce réseau de neurones ? De la prédiction, de l'organisation ? Les cartes de Kohonen sont habituellement utilisées dans un objectif de clustering, ou associées à d'autres algorithmes de prédiction utilisant leurs propriétés structurelles. En étude préliminaire pour CxSOM, il s'agit de comprendre le comportement de l'architecture de cartes.
+
 \section{Cas d'utilisation : les entrées multimodales}
+
+
+
+\subsection{Définition et inspiration biologique}
+
+\subsection{Formalisme}
+
+
+\subsection{Perspectives}
+
+Le formalisme présenté, avec des entrées multimodale comme fonction de variable cachées n'est pas forcément général.  
 
 \section{Représentation des entrées}
 
