--- a/main.tex
+++ b/main.tex
@@ -1,15 +1,25 @@
 %%%% Modèle proposé par frederic.mazaleyrat@ens-paris-saclay.fr %%%%
 %%%% 31/01/2017 %%%%
-
-\documentclass[12pt,a4paper]{book}
+\documentclass{thesul}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
+
+
 \usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhf{}
+\fancyhead[LE,RO]{\thepage}
+\fancyhead[LO]{\rightmark}
+\fancyhead[RE]{\leftmark}
+
+
+
+
 \usepackage{amssymb}
 \usepackage{color} % où xcolor selon l'installation
-\definecolor{Prune}{RGB}{99,0,60}
+%\definecolor{Prune}{RGB}{99,0,60}
 \usepackage{mdframed}
 \usepackage{multirow} %% Pour mettre un texte sur plusieurs rangées
 \usepackage{multicol} %% Pour mettre un texte sur plusieurs colonnes
@@ -22,16 +32,26 @@
 %\RequirePackage{geometry}% That nicely create a one-page template
 %\geometry{textheight=100ex,textwidth=40em,top=30pt,headheight=30pt,headsep=30pt,inner=80pt}
 \usepackage{geometry}
+
 \graphicspath{{./Figures/}}
+
+
+
 \begin{document}
 \input{titlepage}
+
+\mainmatter
 \tableofcontents
+
 \input{Introduction}
+
 \input{Modularite}
 \input{SOM}
 \input{Algorithme}
 \input{Analyse}
 \input{Conclusion}
+
+
 \bibliography{biblio_modularite.bib}
 \bibliographystyle{plain}
 \end{document}
