--- a/01-Modularite/Modularite.tex
+++ b/01-Modularite/Modularite.tex
@@ -1,13 +1,17 @@
 \chapter{Approche modulaire des réseaux de neurones}
+\graphicspath{{01-Modularite/}}
+
+%%%%%%%%
+% Intro du chapitre : Trouver un questionnement, un exemple qui parle de modularité dans les systèmes biologiques:  
+%
+%%%%%%%%%%%%%%%%%%%%%
 De nombreux modèles biologiques présentent des architectures modulaires. Notre conception du monde se présente en fait sous une forme de modularité.
 Présentation d'exemples de théories dérivées d'une modularité bio-inspirée. 
 Brooks \cite{brooks_sumsumption_85}
 
 Réseaux associés aux systèmes complexes, interactions
 
-The mind, the brain and complex adaptative systems : how a mind resides in a brain (1962). Propose la near decomposability 
-
-Trouver un questionnement, un exemple qui parle de modularité dans les systèmes biologiques:  
+The mind, the brain and complex adaptative systems : how a mind resides in a brain (1962) \cite{Morowitz1995TheMT]}. Propose la "near decomposability"
 
 En tant qu'humain, nous comprenons le monde de notre point de vue, en le décomposant pour qu'il semble accessible : en effet notre raisonnement est modulaire, notre système social, groupes d'individus, etc. Nos contructions sont modulaires : programme informatique ... Il est difficile de concevoir et surtout de comprendre, en tant qu'individu un système qui ne serait pas décomposable en modules. Prenons comme exemple les réseaux de neurones profonds : la compréhension  et l'interprétabilité ces programmes est un défi de la recherche actuelle. Pour cette interprétation, on cherche des éléments symboliques, des groupes, des communautés. 
 La décomposition des sciences elles même, par exemple, nous permet de trouver des solutions aux problèmes a des échelles différentes. Le programmeur n'a pas besoin de comprendre en profondeur quels transistors composent les circuits; l'expert.e en electronique n'a pas besoin de d'abord résoudre les équations qui régissent les mouvements ioniques au sein des transistors pour concevoir des circuits, etc. Seuls les principes régissant les comportement globaux d'un système commme le transistors ont besoins d'être connus pour utiliser ces sytèmes dans une tâche; tâche qui consituera également un module dans son ensemble et qui sera régie par des principes généraux, du transitor à l'utilisation d'un logiciel de dessin graphique. 
@@ -16,27 +20,82 @@ Mais est ce que cette hiéarchie modulaire est essentiellement subjective ? A pr
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SECTION 1 introduction via la biologie, exemples 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \section{La modularité, répandue dans les système biologiques}
 
-Qui dit système complexe dit système modulaire ? (pour la fin)
 
-\subsection{Systèmes complexes}
+
+\subsection{Systèmes complexes -> Mettre dans introduction ? }
 
 Les systèmes, dans leur échelles, sont donc complexes. Si on peut approximer certains systèmes pour les étudier, ils restent liés au sein d'un vaste écosystème. Ainsi, l'étude de la modularité des systèmes est présente au sein des approches biologiques.
 
-\subsection{cerveau}
+"Un système complexe est un ensemble constitué d'un grand nombre d'entités en interaction dont l'intégration permet d'achever une mission commune. Les systèmes complexes sont caractérisés par des propriétés émergentes qui n'existent qu'au niveau du système et ne peuvent pas être observées au niveau de ces constituants. (wikipedia)" -> Exemple fourmilière, 
+L'Emergence de patterns et de phénomènes d'auto-organisation (turing patterns) \cite{turing52} qui sont même utilisés pour qualifier le système complexe. 
+
+Il n'y a a priori pas de définition commune concernant ce qu'on appelle un système complexe et comment le mesurer. On pourrait plutot voir la complexité comme une façon d'étudier un objet. 
+
+Exemple de définition : complexité de Kolmogorov qui évalue la complexité par la taille du plus petit module permettant d'engendrer l'objet; une façon de définir la complexité parmi d'autres. Autre exemples : ??
+
+Complexe ne veut pas dire relation et interaction difficiles a exprimer : un système est complexe du point de vue d'un observateur, mais les règles locales sont souvent simples. 
+
+Systèmes liés par des équations d'évolution et des conditions initiales. 
+
+Qui dit système complexe dit système modulaire ?
+
+\subsection{Le cerveau, réseau modulaire fondamental}
 
 L'étude des réseaux biologiques, notamment, a fait émerger l'idée d'architectures modulaires. Et si on rajoute l'idée d'apprentissage, l'étude des cerveaux est une mine d'information et de questionnement quant aux structures et propriétés le permettant. 
 Les premières propositions d'études du cerveau humain datent du début du XXeme siècle. Déjà, un découpage en aires est proposé pour expliquer le fonctionnement de cet organe, notamment avec les travaux de Broca et Wernicke qui mettent en lumière des zones du cerveau qui semblent responsable du langage. Le modèle connexioniste du cerveau, formalisé à partir de ces travaux par Geschwind dans les années 60 , décompose ainsi le langage en plusieurs fonctions : la compréhension, la lecture et l'action de parler. Ce modèle n'est plus vraiment utilisé, mais la décomposition 
 Avec l'avènement des outils d'imagerie, le cerveau a pu être cartographié plus préciséement en un ensemble d'aires, agissant comme modules fonctionnels au sein d'une structure complexe; ces aires sont elles mêmes composées de modules distincts, etc. 
 
+- rétroaction entre les modules \cite{primate_cortex_91}, les pathways sont soit réciproque, soit non, à 50-50
+
 Le cerveau est ainsi présenté en modèle et motivation principale lorsqu'il s'agit de construire des réseaux de neurones artificiels. 
 - Nombreuses études s'appuient sur le système modulaire : le cerveau \cite{primate_cortex_91,mountcastle_columnar_1997,binzegger05}
 
-
 - Modularité structurelle : exemple du cortex visuel
-- Connexions
-- Modularité hiérarchique( modules de modules) : exemples.
+
+- Connexions : hiérarchiques ou non, et feedback, ex boucle baso thalamo corticale, ou au sein des aires comme le cortex visuel.
+
+- Modularité hiérarchique( modules de modules) -> Ajouter infos depuis l'article qui parle de modules hiérrchiques. 
+
+%\begin{figure}
+%\centering
+%\includegraphics[width=0.5\textwidth]{visual_field_maps.jpg}
+%\caption{Représentation de 16 aires cérébrales liées au cortex visuel dans le cerveau humain, voir \cite{WANDELL2007366}}
+%\label{fig:cortex}
+%\end{figure}
+
+\begin{figure}
+\begin{minipage}{0.48\textwidth}
+\centering
+\includegraphics[width=\textwidth]{FVE_fig2map.png}
+\caption{carte aplanie des aires du cortex visuel du macaque \cite{primate_cortex_91}}
+\label{fig:cortex1}
+\end{minipage}
+\begin{minipage}{0.48\textwidth}
+\centering
+\includegraphics[width=\textwidth]{rolls_pathways.pdf}
+\caption{pathways dans le cortex visuel du macaque \cite{Rolls2002ComputationalNO}}
+\label{fig:cortex2}
+\end{minipage}
+\end{figure}
+
+
+%Ajouter figure du cerveau avec le schéma des aires
+
+TODO : que signifient pathways streams (vite fait ) -> on a une co de 1 vers 2 si 2 est une activation post-synaptique de 1. Mais en moyenne ? 
+associer aires des deux figures -> TEO juste a coté de TF et TH, les autres ok.
+
+
+Finalement : 
+Cerveau présente ce qu'on peut appeler des modules, avec des connexions entre eux, avec rétroaction. 
+
+Leur mesure peut etre structurelle (regarder les structures de neurones), ou fonctionnelle : quelles aires s'activent pour une fonction ? \\
+Détail des types de modularité en parties suivantes. 
+
+\subsection{Des réseaux et des modules dans tous les systèmes biologiques}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SECTION 2 : définitions et propriétés
@@ -57,7 +116,7 @@ Il s'agit de tirer une définition claire de ce qu'on appelle modularité. Entre
 
 Lorsque le système possède une structure définie de réseau, typiquement un réseau de neurones, on peut définir une modularité en terme de graphe.
 
-\subsubsection{Réseaux en "petit-monde"}
+\subsubsection{Réseaux en "petit-monde" et réseaux sans échelle}
 Definition: type de graphe dans lequel la distance moyenne entre deux noeuds est proportionnelle à log(N), N le nombre de noeuds. C'est à dire, un graphe dans lequel on trouvera un chemin assez court entre n'importe quels noeuds. 
 Particularités : forme souvent des cliques ( sous graphes fortement connexes), donc une structure modulaire. Par contre, tous les réseaux small world ne sont pas necessairement modulaire. 
 Souvent admis que le cerveau en tant que réseau de neurones est small world. 
@@ -78,9 +137,7 @@ Souvent admis que le cerveau en tant que réseau de neurones est small world.
 Exemples ?? \cite{Meunier2010ModularAH}
 Modularité hiérarchique présente l'avantage de maintenir une activité dans le réseau sans que ca ne colonise tout ni ne s'eteigne, ce qui est nécessaire pour la computation. 
 
-
-\subsubsection{Mesure la modularité}
-
+\subsubsection{Mesurer la modularité d'un réseau}
 clustering coefficient
 proximity ratio
 scale free networks
@@ -92,11 +149,9 @@ scale free networks
 \subsection{Modularité fonctionnelle}
 
 
-\subsection{Modularité temporelle}
+\subsection{Modularité temporelle ?}
 
 La modularité s'associe aux séquences dans le cerveau. On peut donc raisonnablement définir 
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SECTION 3: quel intéret à utiliser des architectures modulaires pour l'apprentissage ? 
 % - 
@@ -117,13 +172,14 @@ Barabasi : Hypothèse que les réseaux small world présentent un avantage evolu
 
 Opaque vs tout savoir
 
-
 \subsection{Modularité et émergence d'un apprentissage ? }
 
 La modularité est liée a la complexité des systèmes, donc l'emergence de comportements chaotiques et/ou synchronisés. 
 SYSTEMATIC GENERALIZATION : WHAT IS REQUIRED
 AND CAN IT BE LEARNED ? : 
 Our findings show that the generalization of modular models is much more systematic and that it is highly sensitive to the module layout, i.e. to how exactly the modules are connected.
+
+Simplicité de la modularité : exemple de construction des fractales, exemple du rigaudon
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SECTION 4 En pratique, ou en est on des réseaux de neurones modulaires ?
@@ -134,8 +190,12 @@ Our findings show that the generalization of modular models is much more systema
 - Challenges et intérêt potentiel des réseaux de neurones modulaires ? -> Evolution (wertmer, meunier) : pousser plus loin pour etre au jus sur les challenges actuels ( voir du coté du deep : quelles sont les motivations et les challenges ? 
 
 
+
 \subsection{Deep Learning}
-Grosse boite noire qui ont des performances remarquables sur le traitement des images, du langage etc; leur représentation est toujours un challenge.
+
+Boites noires qui ont des performances remarquables sur tous les domaines, leur représentation et compréhension est quant à elle toujours un challenge.
+
+\subsubsection{Il existe des réseaux modulaires}
 - Réseaux qui apprennent a s'organiser en modules. Interet. Limites ? Performances ? \cite{Andreas2016NeuralMN,Kirsch2018ModularNL}
 "The NMN approach is intuitively appealing but its
 widespread adoption has been hindered by the large amount of domain knowledge that is required
@@ -143,6 +203,8 @@ to decide (Andreas et al., 2016) or predict (Johnson et al., 2017; Hu et al., 20
 should be created (parametrization) and how they should be connected (layout) based on a natural
 language utterance. Besides, their performance has often been matched by more traditional neural
 models" ( systematic generalization article ) 
+
+\subsubsection{Utiliser des modules pour mieux représenter les réseaux de neurones profond}
 - Trouver des modules dans les réseaux pour les expliquer ? \cite{Watanabe2018ModularRO,Csordas2021AreNN}
 are neural net modular : "it uses different modules for very different functions = Pspecialize," et "it uses the same module for identical functions that
 may have to be performed multiple times = Preuse"
@@ -151,16 +213,26 @@ Pb du deep learning = Data inefficiency (comparé a l'humain);Poor generalisatio
 
 \subsection{Réseaux auto-organisés}
 
+Les réseaux auto-organisés sont directement inspirés des réseaux biologiques. Au sein de ces réseaux
 Plus qu'en deep learning, les réseaux de neurones auto-organisés
 - Auto-organisation prend une profonde inspiration biologique, tout comme les modules.
 - Exemple de réseaux auto-organisés modulaires : développer dans la partie suivante.
+\begin{figure}
+\centering
+\includegraphics[width=0.5\textwidth]{asom}
+\caption{A-SOM model \cite{johnsson_associative_2009}}
+\end{figure}
+\begin{figure}
+\centering
+\includegraphics[width=0.5\textwidth]{hsom}
+\caption{HSOM model \cite{LampinenClusteringPO}}
+\end{figure}
 
-\cite{johnsson_associative_2009}
+
 \cite{LampinenClusteringPO}
 \cite{parisiLL}
 
 \subsection{Construire une architecture modulaire}
-
 
 A mettre dedans : 
 
@@ -181,6 +253,8 @@ On peut donc se poser la question des comportements qui peuvent survenir dans ce
 
 Dans les structures de cartes étudiés, modularité forte dans le sens ou les fonctions des modules sont prédéfinies. Si on ne fournit que les règles d"interaction, ou est ce qu'on se situe ? 
  
+ 
+Position du manuscrit : architecture 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Plan de la partie ! 
