--- a/03-Algorithme/Algorithme.tex
+++ b/03-Algorithme/Algorithme.tex
@@ -1,4 +1,5 @@
 \chapter{Construction d'une architecture modulaire de cartes auto-organisatrices}
+\graphicspath{{03-Algorithme/}}
 Le but de cette thèse est de proposer les bases d'un modèles permettant d'associer des cartes auto-organisatrices dans un cadre général. 
 
 
