--- a/04-Analyse/Analyse.tex
+++ b/04-Analyse/Analyse.tex
@@ -1,5 +1,5 @@
 \chapter{Analyser l'organisation : une approche par variables aléatoires}
-
+\graphicspath{{04-Analyse/}}
 Avant de présenter les performances d'un algorithme, il s'agit de définir plus précisément ce qu'on attend de ce système et comment le représenter. L'architecture CxSOM se présente comme une construction qui répond à un questionnement structurel des réseaux de neurones. Mais au juste, qu'attend t-on de ce réseau de neurones ? De la prédiction, de l'organisation ? Les cartes de Kohonen sont habituellement utilisées dans un objectif de clustering, ou associées à d'autres algorithmes de prédiction utilisant leurs propriétés structurelles. En étude préliminaire pour CxSOM, il s'agit de comprendre le comportement de l'architecture de cartes.
 
 \section{Cas d'utilisation : les entrées multimodales}
