--- a/biblio_modularite.bib
+++ b/biblio_modularite.bib
@@ -8,6 +8,44 @@ year = {1991},
 booktitle={Cerebral Cortex}
 }
 
+@article{turing52,
+ ISSN = {00804622},
+ author = {A. M. Turing},
+ journal = {Philosophical Transactions of the Royal Society of London. Series B, Biological Sciences},
+ number = {641},
+ pages = {37--72},
+ publisher = {The Royal Society},
+ title = {The Chemical Basis of Morphogenesis},
+ volume = {237},
+ year = {1952}
+}
+
+@article{WANDELL2007366,
+title = {Visual Field Maps in Human Cortex},
+journal = {Neuron},
+volume = {56},
+number = {2},
+pages = {366-383},
+year = {2007},
+issn = {0896-6273},
+doi = {https://doi.org/10.1016/j.neuron.2007.10.012},
+url = {https://www.sciencedirect.com/science/article/pii/S089662730700774X},
+author = {Brian A. Wandell and Serge O. Dumoulin and Alyssa A. Brewer}
+
+}
+
+@inproceedings{Morowitz1995TheMT,
+  title={The Mind, the Brain, and Complex Adaptive Systems},
+  author={Harold J. Morowitz},
+  year={1995}
+}
+
+@inproceedings{Rolls2002ComputationalNO,
+  title={Computational neuroscience of vision},
+  author={Edmund T. Rolls and Gustavo Deco},
+  year={2002}
+}
+
 @article{mountcastle_columnar_1997,
 	title = {The columnar organization of the neocortex},
 	volume = {120},
