--- a/main.tex
+++ b/main.tex
@@ -1,12 +1,13 @@
-%%%% Modèle proposé par frederic.mazaleyrat@ens-paris-saclay.fr %%%%
-%%%% 31/01/2017 %%%%
-\documentclass{thesul}
+%Documentclass thesul modifée pour mettre les logos CS : thesul-cs
+\documentclass{thesul-cs}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 
 
+
+%Fancy headers
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
@@ -14,12 +15,8 @@
 \fancyhead[LO]{\rightmark}
 \fancyhead[RE]{\leftmark}
 
-
-
-
 \usepackage{amssymb}
 \usepackage{color} % où xcolor selon l'installation
-%\definecolor{Prune}{RGB}{99,0,60}
 \usepackage{mdframed}
 \usepackage{multirow} %% Pour mettre un texte sur plusieurs rangées
 \usepackage{multicol} %% Pour mettre un texte sur plusieurs colonnes
@@ -29,29 +26,22 @@
 \usepackage[absolute]{textpos} 
 \usepackage{colortbl}
 \usepackage{array}
-%\RequirePackage{geometry}% That nicely create a one-page template
-%\geometry{textheight=100ex,textwidth=40em,top=30pt,headheight=30pt,headsep=30pt,inner=80pt}
-\usepackage{geometry}
 
-\graphicspath{{./Figures/}}
-
+%def path for files
 
 
 \begin{document}
 \input{titlepage}
-
-\mainmatter
 \tableofcontents
-
-\input{Introduction}
-
-\input{Modularite}
-\input{SOM}
-\input{Algorithme}
-\input{Analyse}
+\input{00-Introduction/Introduction}
+\mainmatter
+\input{01-Modularite/Modularite}
+\input{02-SOM/SOM}
+\input{03-Algorithme/Algorithme}
+\input{04-Analyse/Analyse}
 \input{Conclusion}
 
-
+%Bibliography files
 \bibliography{biblio_modularite.bib}
 \bibliographystyle{plain}
 \end{document}
