--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,5 +1,5 @@
 \ThesisTitle{A propos des architectures de cartes auto-organisatrices stylées}
-\ThesisDate{le plus tard possible 2022}
+\ThesisDate{le plus tard possible en 2022}
 \ThesisAuthor{Noémie Gonnier}
 \ThesisUL
 % Jury:
