--- a/02-SOM/SOM.tex
+++ b/02-SOM/SOM.tex
@@ -1,11 +1,11 @@
 \chapter{Un réseau de neurones auto-organisé : les cartes de kohonen}
+\graphicspath{{01-Modularite/}}
 // Kohonen : il faut surprendre encore ! Par quel 
 bout le prendre ? 
 → Appuyer sur les cartes 1D
 → Comment ca se fait qu’on les utilise pas de ouf ? 
 →  Intérêt de la topologie de la carte. Dans une carte seule, est ce que c’est vraiment utile ?
 → Questionnement informatique : qu’est ce qui se passe en fait dedans, mais c’est quand même rigolo.
-
 
 \section{Principe Général}
 Une carte de Kohonen est un graphe dans lequel chaque noeud possède un poids $\omega$ appartenant à l'espace des entrées. L'algorithme repose ensuite sur l'adaptation de ces poids, en prenant en compte les connexions dans le graphe, afin de représenter les données d'entrées. 
@@ -18,6 +18,7 @@ La notion de voisinage et de topologie est un élément clé des cartes de Kohon
 \section{Principes d'organisation}
 
 
+\section{Travaux préliminaires sur les architectures de cartes de Kohonen}
 
 \section{A trier}
 De la biologie a la computation : patterns temporels des neurones impulsionnels vs SOM. 
