algorithme, premier jet, a completer

--- a/main.tex
+++ b/main.tex
@@ -27,8 +27,15 @@
 \usepackage{colortbl}
 \usepackage{array}
 
-%def path for files
+\usepackage{algorithm2e}
+\SetAlCapSkip{1em}
+\SetKwInput{KwInput}{Input}
+\SetKwInput{KwOutput}{Output}
+\usepackage{mathtools}
+\DeclareMathOperator{\sign}{sgn}
 
+%def path for files
+\input{Notations.tex}
 
 \begin{document}
 \input{titlepage}
